--- a/index.html
+++ b/index.html
@@ -4,366 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/css/style.css">
     <link rel="stylesheet" href="styles/css/fontawesome.min.css">
-    <title>Brand</title>
+    <title>Product</title>
 </head>
 <body>
-    <div class="header container">
-        <div class="header-left">
-            <a href="index.html"><img src="img/logo.png" alt="logo">Bran<span>d</span></a>
-            <form class="header-search" method="get">
-                <div class="search-browse">Browse &nbsp; <i class="fas fa-caret-down"></i>
-                    <div class="browse-menu-box">
-                        <div class="tail1 browse-tail1"></div>
-                        <div class="tail2 browse-tail2"></div>
-                        <div class="browse-menu-header">Women</div>
-                        <ul class="browse-menu-list">
-                            <li><a href="#">Dresses</a></li>
-                            <li><a href="#">Tops</a></li>
-                            <li><a href="#">Sweaters/Knits</a></li>
-                            <li><a href="#">Jackets/Coats</a></li>
-                            <li><a href="#">Blazers</a></li>
-                            <li><a href="#">Denim</a></li>
-                            <li><a href="#">Leggings/Pants</a></li>
-                            <li><a href="#">Skirts/Shorts</a></li>
-                            <li><a href="#">Accessories</a></li>
-                        </ul>
-                        <div class="browse-menu-header">Men</div>
-                        <ul class="browse-menu-list">
-                            <li><a href="#">Tees/Tank tops</a></li>
-                            <li><a href="#">Shirts/Polos</a></li>
-                            <li><a href="#">Sweaters</a></li>
-                            <li><a href="#">Sweatshirts/Hoodies</a></li>
-                            <li><a href="#">Blazers</a></li>
-                            <li><a href="#">Jackets/vests</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <input type="text" class="input-text" name="search" placeholder="Search for Item...">
-                <button><i class="fas fa-search"></i></button>
-            </form>
-        </div>
-        <div class="header-right">
-            <label class="cart-icon" for="cart"><img src="img/cart.png" alt="cart"></label>
-            <input class="cart" id="cart" type="checkbox">
-            <div class="cart-menu-box">
-                <div class="tail1 cart-tail1"></div>
-                <div class="tail2 cart-tail2"></div>
-                <div class="cart-menu">
-                    <div class="cart-menu-img">
-                        <img src="img/Layer_46.jpg" alt="shirt">
-                    </div>
-                    <div class="cart-menu-info">
-                        <p>rebox zane</p>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><br>
-                        <span>1 x $250</span>
-                    </div>
-                    <a href="#"><i class="fas fa-times-circle"></i></a>
-                </div>
-                <div class="cart-menu">
-                    <div class="cart-menu-img">
-                        <img src="img/layer_421.jpg" alt="shirt">
-                    </div>
-                    <div class="cart-menu-info">
-                        <p>rebox zane</p>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i><br>
-                        <span>1 x $250</span>
-                    </div>
-                    <a href="#"><i class="fas fa-times-circle"></i></a>
-                </div>
-                <div class="cart-menu-price">
-                    <p>TOTAL</p>
-                    <p>$500.00</p>
-                </div>
-                <div class="cart-menu-checkout-button-box">
-                    <a class="cart-menu-checkout-button" href="checkout.html">checkout</a>
-                    <a class="cart-menu-checkout-button" href="shopingCart.html">go to cart</a>
-                </div>
-            </div>
-            <a class="my-acc" href="#">My Account &nbsp; <i class="fas fa-caret-down"></i></a>
-        </div>
-    </div>
-    <div class="header-line"></div>
-    <div class="nav">
-        <label class="nav-button" for="nav-checkbox">menu</label>
-        <input class="nav-checkbox" type="checkbox" id="nav-checkbox">
-        <ul class="menu-list">
-            <label class="nav-button" for="nav-checkbox"><i class="fas fa-times"></i></label>
-            <li class="menu-item"><a class="menu-link" href="#">Home</a></li>
-            <li class="menu-item"><a class="menu-link" href="#">Man</a></li>
-            <li class="menu-item womenHover">
-                <a class="menu-link" href="singlePage.html">Women</a>
-                <div class="nav-menu-box">
-                    <div class="tail1 nav-tail1"></div>
-                    <div class="tail2 nav-tail2"></div>
-                    <div class="nav-menu-header">Women</div>
-                    <ul class="nav-menu-list">
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Tops</a></li>
-                        <li><a href="#">Sweaters/Knits</a></li>
-                        <li><a href="#">Jackets/Coats</a></li>
-                        <li><a href="#">Blazers</a></li>
-                        <li><a href="#">Denim</a></li>
-                        <li><a href="#">Leggings/Pants</a></li>
-                        <li><a href="#">Skirts/Shorts</a></li>
-                        <li><a href="#">Accessories</a></li>
-                    </ul>
-                    <div class="nav-menu-header">Women</div>
-                    <ul class="nav-menu-list">
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Tops</a></li>
-                        <li><a href="#">Sweaters/Knits</a></li>
-                        <li><a href="#">Jackets/Coats</a></li>
-                    </ul>
-                    <div class="nav-menu-header">Women</div>
-                    <ul class="nav-menu-list">
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Tops</a></li>
-                        <li><a href="#">Sweaters/Knits</a></li>
-                    </ul>
-                    <div class="nav-menu-header">Women</div>
-                    <ul class="nav-menu-list">
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Tops</a></li>
-                        <li><a href="#">Sweaters/Knits</a></li>
-                        <li><a href="#">Jackets/Coats</a></li>
-                    </ul>
-                    <div class="nav-menu-sale">
-                        <a href="#">Super <br> sale!</a>
-                    </div>
-                </div>
-            </li>
-            <li class="menu-item"><a class="menu-link" href="#">Kids</a></li>
-            <li class="menu-item"><a class="menu-link" href="#">Accessories</a></li>
-            <li class="menu-item"><a class="menu-link" href="#">Featured</a></li>
-            <li class="menu-item"><a class="menu-link" href="checkout.html">Hot deals</a></li>
-        </ul>
-    </div>
-    <div class="citizen">
-        <div class="the-brand container">
-            <div class="citizen-text">
-                <h1 class="tb">THE BRAND</h1>
-                <h2 class="lux">OF LUXERIOUS <span>FASHION</span></h2>
-            </div>
-        </div>
-    </div>
-
-    <div class="content container">
-        <div class="for-men">
-            <div class="content-text">
-                <h4>hot deal</h4>
-                <h3>for men</h3>
-            </div>
-        </div>
-        <div class="acces">
-            <div class="content-text">
-                <h4>luxirous & trendy</h4>
-                <h3>accesories</h3>
-            </div>
-        </div>
-        <div class="women">
-            <div class="content-text">
-                <h4>30% offer</h4>
-                <h3>women</h3>
-            </div>
-        </div>
-        <div class="for-kids">
-            <div class="content-text">
-                <h4>new arrivals</h4>
-                <h3>for kids</h3>
-            </div>
-        </div>
-    </div>
-    <div class="featured-items">
-        <h3>Featured Items</h3>
-        <p>Shop for items based on what we featured in this week</p>
-    </div>
-    <div class="featured-content container">
-        <div class="products">
-            <img class="prod-img" src="img/Layer_2.jpg" alt="item">
-            <p class="description">Mango  People  T-shirt</p>
-            <p class="price">$52.00</p>
-            <div class="img-hover">
-                <button><img src="img/cart.svg" alt="cart">Add to Cart</button>
-            </div>
-        </div>
-        <div class="products">
-            <img class="prod-img" src="img/Layer_3.jpg" alt="item">
-            <p class="description">Mango  People  T-shirt</p>
-            <p class="price">$52.00</p>
-            <div class="img-hover">
-                <button><img src="img/cart.svg" alt="cart">Add to Cart</button>
-            </div>
-        </div>
-        <div class="products">
-            <img class="prod-img" src="img/Layer_4.jpg" alt="item">
-            <p class="description">Mango  People  T-shirt</p>
-            <p class="price">$52.00</p>
-            <div class="img-hover">
-                <button><img src="img/cart.svg" alt="cart">Add to Cart</button>
-            </div>
-        </div>
-        <div class="products">
-            <img class="prod-img" src="img/Layer_5.jpg" alt="item">
-            <p class="description">Mango  People  T-shirt</p>
-            <p class="price">$52.00</p>
-            <div class="img-hover">
-                <button><img src="img/cart.svg" alt="cart">Add to Cart</button>
-            </div>
-        </div>
-        <div class="products">
-            <img class="prod-img" src="img/Layer_6.jpg" alt="item">
-            <p class="description">Mango  People  T-shirt</p>
-            <p class="price">$52.00</p>
-            <div class="img-hover">
-                <button><img src="img/cart.svg" alt="cart">Add to Cart</button>
-            </div>
-        </div>
-        <div class="products">
-            <img class="prod-img" src="img/Layer_7.jpg" alt="item">
-            <p class="description">Mango  People  T-shirt</p>
-            <p class="price">$52.00</p>
-            <div class="img-hover">
-                <button><img src="img/cart.svg" alt="cart">Add to Cart</button>
-            </div>
-        </div>
-        <div class="products">
-            <img class="prod-img" src="img/Layer_8.jpg" alt="item">
-            <p class="description">Mango  People  T-shirt</p>
-            <p class="price">$52.00</p>
-            <div class="img-hover">
-                <button><img src="img/cart.svg" alt="cart">Add to Cart</button>
-            </div>
-        </div>
-        <div class="products">
-            <img class="prod-img" src="img/Layer_9.jpg" alt="item">
-            <p class="description">Mango  People  T-shirt</p>
-            <p class="price">$52.00</p>
-            <div class="img-hover">
-                <button><img src="img/cart.svg" alt="cart">Add to Cart</button>
-            </div>
-        </div>
-    </div>
-    <div class="all-product-box">
-        <div class="all-product">
-            <a href="#">Browse All Product &nbsp; <i class="fas fa-long-arrow-alt-right"></i></a>
-        </div>
-    </div>
-    <div class="sale container">
-        <div class="sale-background">
-            <div class="sale-text">
-                <h2>30% <span>OFFER</span></h2>
-                <h3>FOR WOMEN</h3>
-            </div>
-        </div>
-        <div class="sale-info-box">
-            <div class="sale-block">
-                <div class="sale-img"><img src="img/car.png" alt="car"></div>
-                <div class="sale-info">
-                    <h4>Free Delivery</h4>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
-                </div>
-            </div>
-            <div class="sale-block">
-                <div class="sale-img"><img src="img/sale.png" alt="sale"></div>
-                <div class="sale-info">
-                    <h4>Sales & discounts</h4>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
-                </div>
-            </div>
-            <div class="sale-block">
-                <div class="sale-img"><img src="img/crown.png" alt="crown"></div>
-                <div class="sale-info">
-                    <h4>Quality assurance</h4>
-                    <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="subscribe-box">
-        <div class="subscribe-content container">
-            <div class="to-the-right">
-                <div class="subscribe-text">
-                    <img src="img/face.png" alt="face" height="83">
-                    <div>
-                        <p class="vest">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
-                            a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</p>
-                        <p class="bin">Bin Burhan</p>
-                        <p class="dhaka">Dhaka, Bd</p>
-                        <div class="rectangle">
-                            <div class="white"></div>
-                            <div class="white active-pink"></div>
-                            <div class="white"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="subscribe">
-                <div class="to-the-left">
-                    <p>Subscribe</p>
-                    <span>FOR OUR NEWLETTER AND PROMOTION</span>
-                    <form class="email" method="get">
-                        <input type="text" name="email" placeholder="Enter Your Email">
-                        <button>Subscribe</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="info-box container">
-        <div class="info">
-            <div class="info-text">
-                <a class="brand" href="index.html"><img src="img/logo.png" alt="logo">Bran<span>d</span></a>
-                <p>Objectively transition extensive data rather than cross functional solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array of processes and cross-unit partnerships.
-                    <br><br>
-                    Efficiently plagiarize 24/365 action items and focused infomediaries.
-                    Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.
-                </p>
-            </div>
-            <div class="bottom-nav">
-                <div class="info-links">
-                    <h2 class="info-list">COMPANY</h2>
-                    <ul>
-                        <li class="info-list"><a class="info-list-link" href="#">home</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">shop</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">about</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">how it works</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">contact</a></li>
-                    </ul>
-                </div>
-                <div class="info-links">
-                    <h2 class="info-list">INFORMATION</h2>
-                    <ul>
-                        <li class="info-list"><a class="info-list-link" href="#">Tearms & Condition</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">Privacy Policy</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">How to Buy</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">How to Sell</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">Promotion</a></li>
-                    </ul>
-                </div>
-                <div class="info-links">
-                    <h2 class="info-list">SHOP CATEGORY</h2>
-                    <ul>
-                        <li class="info-list"><a class="info-list-link" href="#">men</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">women</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">child</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">apparel</a></li>
-                        <li class="info-list"><a class="info-list-link" href="#">browse all</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="root"></div>
+<script src="bundle.js"></script>
 </body>
-<footer>
-    <div class="footer container">
-        <div class="copy"> &copy; 2017 Brand  All Rights Reserved. </div>
-        <div class="footer-links">
-            <a href="#"><div class="footer-link"><i class="fab fa-linkedin-in"></i></div></a>
-            <a href="#"><div class="footer-link"><i class="fab fa-twitter"></i></div></a>
-            <a href="#"><div class="footer-link"><i class="fab fa-pinterest-p"></i></div></a>
-            <a href="#"><div class="footer-link"><i class="fab fa-facebook-f"></i></div></a>
-            <a href="#"><div class="footer-link"><i class="fab fa-google-plus-g"></i></div></a>
-        </div>
-    </div>
-</footer>
 </html>
